--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <div class="max-w-4xl mx-auto bg-white my-8">
         <header class="bg-gray-800 text-white p-6 md:p-8">
             <div class="flex flex-col md:flex-row items-center">
-                <section>
-                <img class="w-[200px] self-center border-4 border-blue-600 rounded-[20px] p-[5px]" src="cli.jpg" alt="passport photo of Walter">
-            </section>
+                <div class="w-48 h-48 bg-white p-1 border-gray-300">
+                    <img src="cli.jpg" alt="passport"
+                        class="w-full h-full object-cover">
+                </div>
                 <div class="text-center md:text-left">
                     <h1 class="text-3xl md:text-4xl font-bold text-black">AYIKO GIFT CLLIFORD</h1>
                     <p class="text-xl mt-2">Student of Muni University</p>
@@ -199,3 +200,4 @@
     </div>
 </body>
 </html>
+
