--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="bg-white rounded-xl shadow-lg p-6 mb-8">
             <div class="flex flex-col md:flex-row items-center md:items-start gap-6">
                 <div class="w-48 h-48 rounded-full overflow-hidden border-4 border-blue-200 shadow-md">
-                    <img src="cli.jpg" alt="Ayiko Gift Clifford" class="w-full h-full object-cover">
+                    <img src="clif.jpg" alt="Ayiko Gift Clifford" class="w-full h-full object-cover">
                 </div>
                 <div class="flex-1 text-center md:text-left">
                     <h1 class="text-4xl font-bold text-gray-800 mb-2">AYIKO GIFT CLLIFORD</h1>
@@ -208,3 +208,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 </body>
 </html>
+
